--- a/MNIST Machine Learning Methods.ipynb
+++ b/MNIST Machine Learning Methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "import tensorflow.keras as keras\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +66,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Build Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,19 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\29578\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "If using Keras pass *_constraint arguments to layers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "network = models.Sequential()\n",
     "network.add(layers.Dense(512, activation='relu', input_shape=(28 * 28,)))\n",
@@ -133,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,12 +144,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Reshape and Normalization"
+    "### 3. Reshape and Normalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +196,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Run NN model"
+    "### 4. Run NN model and test model (accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -212,57 +210,27 @@
      "text": [
       "Train on 60000 samples\n",
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 58s 958us/sample - loss: 0.2547 - acc: 0.9266\n",
+      "60000/60000 [==============================] - 5s 78us/sample - loss: 0.2544 - acc: 0.9255\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 25s 413us/sample - loss: 0.1038 - acc: 0.9689 - loss: 0.1046 \n",
+      "60000/60000 [==============================] - 3s 56us/sample - loss: 0.1022 - acc: 0.9696\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 11s 176us/sample - loss: 0.0685 - acc: 0.9802\n",
+      "60000/60000 [==============================] - 3s 57us/sample - loss: 0.0677 - acc: 0.9801\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 15s 242us/sample - loss: 0.0504 - acc: 0.9847 - loss: - ETA: 5s -  - ETA: 1\n",
+      "60000/60000 [==============================] - 3s 58us/sample - loss: 0.0489 - acc: 0.9853\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 16s 260us/sample - loss: 0.0377 - acc: 0.9891\n"
+      "60000/60000 [==============================] - 4s 59us/sample - loss: 0.0375 - acc: 0.9886\n",
+      "10000/10000 [==============================] - 1s 87us/sample - loss: 0.0685 - acc: 0.9793\n",
+      "0.9793\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1e880283948>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
     "network.fit(train_images, train_labels_cat, epochs=5, batch_size=128)\n",
     "#x:input data. y: target data\n",
     "#batch size: self-determined. # of smples per gradient update. # of figures used to train NN\n",
-    "#epoch: integer. # of epoches to train the model. an epoch is an iteration over the entire data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Test model (accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 7s 719us/sample - loss: 0.0682 - acc: 0.98050s - loss: 0.0928 - - E\n",
-      "0.9805\n"
-     ]
-    }
-   ],
-   "source": [
+    "#epoch: integer. # of epoches to train the model. an epoch is an iteration over the entire data.\n",
     "test_loss, test_acc = network.evaluate(test_images, test_labels_cat)\n",
     "print(test_acc)\n",
     "#test_acc: accuracy of prediction compared with the truth"
@@ -272,13 +240,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Five Machine Learning Models were implemented to MNIST dataset. The accuracy of prediction for the five models was compared with NN example (accuracy=0.9805).\n",
+    "### Four Machine Learning Models were implemented to MNIST dataset. The accuracy of prediction for the five models was compared with NN example (accuracy=0.9793).\n",
     "    Model 1: Support Vector Machine (SVM). Accuracy=0.9786\n",
     "    Model 2: Random Forest. Accuracy=0.9715\n",
     "    Model 3: K-Nearest Neighbors. Accuracy=0.9688\n",
-    "    Model 4: multinomial logistic with L2 penalty. Accuracy=0.8978 \n",
+    "    Model 4: multinomial logistic with L2 penalty. Accuracy=0.9248\n",
     "    Model 5: Neural Network. (This multi-layer Perceptron classifier optimizes the log-loss function using LBFGS). Accuracy=0.981\n",
     "   \n",
+    "###  Conclusion: \n",
+    "SVM and Multi-layer perceptron classifer have similar accuracy compared with the NN example, followed by random forest and K-nearest neighbors. Multinomial logistic model has the worse prediction performance. The accuracy can be further improved by training the tuning parameters.\n",
+    "\n",
     "An example of cross-validation and grid search was offered at the end to train hyperparameters in the models."
    ]
   },
@@ -291,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,13 +270,12 @@
     "from sklearn import metrics\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.preprocessing import scale\n",
-    "import pandas as pd\n",
-    "import random"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -369,6 +339,8 @@
     }
    ],
    "source": [
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
     "model_linear = SVC(kernel='poly',gamma=\"scale\",C=10)\n",
     "model_linear.fit(train_images, train_labels)\n",
     "# accuracy\n",
@@ -384,8 +356,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Tuning hyperparameters\n",
+    "      model 1. rf = RandomForestClassifier(n_estimators=150,max_depth=10). Accuracy=0.948\n",
+    "      model 2. rf = RandomForestClassifier(n_estimators=100). Accuracy=0.9699\n",
+    "      model 3. rf = RandomForestClassifier(n_estimators=150). Accuracy=0.9708"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -412,14 +394,14 @@
      "text": [
       "Train model\n",
       "Compute predictions\n",
-      "Accuracy:  0.921\n"
+      "Accuracy:  0.932\n"
      ]
     }
    ],
    "source": [
     "random.seed(1)\n",
     "np.random.seed(1)\n",
-    "rf = RandomForestClassifier(n_estimators=150,max_depth=10) \n",
+    "rf = RandomForestClassifier(n_estimators=250) \n",
     "#n_estimators and max_depth controlled by cross-validation\n",
     "#n_estimators: number of trees. \n",
     "#max_depth : The maximum depth of the tree. log_2(28*28)=9.6\n",
@@ -428,18 +410,6 @@
     "print(\"Compute predictions\")\n",
     "test_pred_rf = rf.predict(test_images1)\n",
     "print(\"Accuracy: \", metrics.accuracy_score(test_labels1, test_pred_rf))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Tuning hyperparameters\n",
-    "#model 1. rf = RandomForestClassifier(n_estimators=150,max_depth=10). Accuracy=0.948\n",
-    "#model 2. rf = RandomForestClassifier(n_estimators=100). Accuracy=0.9699\n",
-    "#model 3. rf = RandomForestClassifier(n_estimators=150). Accuracy=0.9708"
    ]
   },
   {
@@ -540,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,16 +519,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "?LogisticRegression"
+    "?LogisticRegression\n",
+    "#solver: Algorithm to use in the optimization problem.'saga' are faster for large datasets\n",
+    "#C: inverse of regularizationi strength. smaller values specify stronger regularization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -567,13 +539,14 @@
      "text": [
       "Train model\n",
       "Compute predictions\n",
-      "Accuracy:  0.875\n"
+      "Accuracy:  0.892\n"
      ]
     }
    ],
    "source": [
-    "train_samples1 = 5000\n",
-    "clf = LogisticRegression(C=50. / train_samples1, penalty='l2', solver='saga', tol=0.1,multi_class=\"auto\")#multi_class=10\n",
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
+    "clf = LogisticRegression(C=10, penalty='l2', solver='saga', tol=0.1,multi_class=\"multinomial\")#\"auto\")#multi_class=10\n",
     "print(\"Train model\")\n",
     "clf.fit(train_images1, train_labels1)\n",
     "print(\"Compute predictions\")\n",
@@ -583,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -592,13 +565,14 @@
      "text": [
       "Train model\n",
       "Compute predictions\n",
-      "Accuracy:  0.8978\n"
+      "Accuracy:  0.9248\n"
      ]
     }
    ],
    "source": [
-    "train_samples = 60000\n",
-    "clf = LogisticRegression(C=50. / train_samples, penalty='l2', solver='saga', tol=0.1,multi_class=\"auto\")\n",
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
+    "clf = LogisticRegression(C=10, penalty='l2', solver='saga', tol=0.1,multi_class=\"multinomial\")\n",
     "print(\"Train model\")\n",
     "clf.fit(train_images, train_labels)\n",
     "print(\"Compute predictions\")\n",
@@ -615,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,13 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "?MLPClassifier \n",
-    "#Multi-layer Perceptron classifier.optimizes the log-loss function using LBFGS or stochastic gradient descent.\n",
-    "#default activation function for hidden layer is Relu"
+    "#Multi-layer Perceptron classifier optimizes the log-loss function using LBFGS or stochastic gradient descent.\n",
+    "#LBFGS: approximate BFGS, is an optimization algorithm in the Newton-Raphson family with limited amount of computer memory \n",
+    "#default activation function for hidden layer is Relu\n",
+    "#the single-layer perceptron is the simplest feedforward neural network.\n",
+    "#perceptron is a linear binary classifier. f(x)=I(w*x+b>0), w:weight, x:input"
    ]
   },
   {
@@ -659,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -673,6 +650,8 @@
     }
    ],
    "source": [
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
     "clf = MLPClassifier(solver='lbfgs',hidden_layer_sizes=(1000,),  random_state=1 ) \n",
     "print(\"Train model\")\n",
     "clf.fit(train_images, train_labels)\n",
