--- a/Classification of Dogs vs Cats.ipynb
+++ b/Classification of Dogs vs Cats.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,9 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -505,15 +512,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 1. 1. 0. 1. 0. 1. 0.]\n",
-      "[ 1.  1.  1.  1. -1.  1. -1.  1. -1.]\n"
+      "[0. 0. 1. 1. 1. 1. 1. 0. 1.]\n",
+      "[-1. -1.  1.  1.  1.  1.  1. -1.  1.]\n"
      ]
     }
    ],
@@ -673,6 +680,57 @@
     "print(\"Compute predictions\")\n",
     "test_pred_sh = sh.predict(sample_validation_images0)\n",
     "print(\"Accuracy: \", metrics.accuracy_score(sample_validation_labels, test_pred_sh))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Explore: Set dense=2/1?\n",
+    "sample_training_labels and sample_validation_labels have dimension (XXX, 1) should be used for ML methods (i.e. existing package for logistic regerssion, linear regression, and SVC). \n",
+    "\n",
+    "sample_training_labels0 and sample_validation_labels0 have dimension (XXX, 2) should be used for NN with dense=2 for output layer. \n",
+    "\n",
+    "* Dense = 2, means dimension of output = 2. treat as multinomial, softmax activation function\n",
+    "* Dense = 2, means dimension of output = 1. treat as binomial, sigmoid activation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1000/1000 [==============================] - 1s 1ms/step - loss: 0.9455 - acc: 0.4980\n",
+      "Epoch 2/5\n",
+      "1000/1000 [==============================] - 0s 419us/step - loss: 0.7595 - acc: 0.5200\n",
+      "Epoch 3/5\n",
+      "1000/1000 [==============================] - 0s 425us/step - loss: 0.5958 - acc: 0.5010\n",
+      "Epoch 4/5\n",
+      "1000/1000 [==============================] - 0s 411us/step - loss: 0.5344 - acc: 0.4820\n",
+      "Epoch 5/5\n",
+      "1000/1000 [==============================] - 0s 401us/step - loss: 0.5204 - acc: 0.4590\n",
+      "1000/1000 [==============================] - 1s 709us/step\n",
+      "0.426\n"
+     ]
+    }
+   ],
+   "source": [
+    "#fit the mdoel \n",
+    "netlogit = models.Sequential()\n",
+    "netlogit.add(layers.Dense(1, activation='linear'))\n",
+    "netlogit.compile(optimizer='adadelta',loss='hinge',metrics=['accuracy'])\n",
+    "netlogit.fit(sample_training_images0, sample_training_labels, epochs=5, batch_size=300)\n",
+    "\n",
+    "import random\n",
+    "random.seed(1)\n",
+    "np.random.seed(1)\n",
+    "test_loss, test_acc = netlogit.evaluate(sample_validation_images0, sample_validation_labels)\n",
+    "print(test_acc)"
    ]
   }
  ],
